--- a/algamoney-api/pom.xml
+++ b/algamoney-api/pom.xml
@@ -69,8 +69,9 @@
 		</dependency>
 
 		<dependency>
-			<groupId>org.hibernate</groupId>
-			<artifactId>hibernate-jpamodelgen</artifactId> 
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.4</version>
 		</dependency>
 
 	</dependencies>
@@ -83,6 +84,4 @@
 			</plugin>
 		</plugins>
 	</build>
-
-
 </project>
