--- a/algamoney-api/pom.xml
+++ b/algamoney-api/pom.xml
@@ -79,10 +79,16 @@
 			<artifactId>spring-boot-starter-security</artifactId>
 		</dependency>
 
- 		<dependency>
+		<dependency>
 			<groupId>org.springframework.security.oauth</groupId>
 			<artifactId>spring-security-oauth2</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.security</groupId>
+			<artifactId>spring-security-jwt</artifactId>
+		</dependency>
+
 
 	</dependencies>
 
